TWC3167-10710, TWC3167-10680 : Deals screen filter alignment fixes, rule details model pop-up text modified (#3754)

--- a/Intel.MyDeals/Client/src/app/style/style.css
+++ b/Intel.MyDeals/Client/src/app/style/style.css
@@ -3018,3 +3018,9 @@ kendo-popup kendo-grid-filter-menu-container dropdown-filter kendo-combobox .k-b
     display: block;
     width: 215px !important;
 }
+
+#allDeals .k-cell-inner .k-grid-header-menu {
+    margin-inline-end: 10px;
+    position: relative;
+    top: 1px;
+}
